--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,11 +1,12 @@
+*{
+  box-sizing:border-box;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -28,11 +29,21 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+form {
+  background-color: white;
+  width: 550px;
+  height: 66px;
+  /* padding: 10px; */
+  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.25);
+  display: flex;
+}
+
+html, body{
+  background-color: #FCF6E8;
+}
+
+input {
+  width: 80%; 
+  height: 70%;
+  margin: auto 2%;  
 }
