--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,6 +36,8 @@ form {
   /* padding: 10px; */
   box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.25);
   display: flex;
+  margin: auto;
+  padding: 6px;
 }
 
 html, body{
@@ -45,5 +47,27 @@ html, body{
 input {
   width: 80%; 
   height: 70%;
-  margin: auto 2%;  
+  margin: auto 2%;
+  border-radius: 8px; 
+  padding: 12px;
+  display: inline-block;
+  border-width: 3px;
+  border-color: black;
+  border-style: solid;
+}
+
+.icon{
+  margin: 12px;
+}
+
+.sidebar{
+/* display: inline-block; */
+background-color: white;
+width: 25%;
+height: 500px;
+box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.25);
+}
+
+.filter{
+  list-style-type: none;
 }
