--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,6 @@
 *{
   box-sizing:border-box;
+  font-family: Imprima, sans-serif;
 }
 
 .App {
@@ -63,11 +64,37 @@ input {
 .sidebar{
 /* display: inline-block; */
 background-color: white;
-width: 25%;
-height: 500px;
+width: 20%;
+height: 540px;
+padding: 10px;
 box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.25);
 }
 
 .filter{
   list-style-type: none;
+}
+
+button{
+  border-radius: 7px;
+  background-color:white;
+  height: 30px;
+  width: 130px;
+  padding-left: 12px;
+  padding-right: 12px;
+  margin-top: 7px;
+  margin-bottom: 7px;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 20px;
+  display: block;
+}
+
+button:hover{
+  background-color:#343434;
+  color: white;
+}
+
+.category{
+  font-size: 18px;
+  margin-top: 20px;
 }
