--- a/client/src/App.css
+++ b/client/src/App.css
@@ -35,6 +35,7 @@ display: block;
 }
 
 section.content{
+  width: 1145px;
 
 }
 
@@ -123,8 +124,6 @@ button:hover{
   color: #343434;
   text-align: left;
   box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.25);
-  /* display: inline-block; */
-  /* float: left; */
   float: left;
   margin-top: 3%;
   margin-left: 5%;
@@ -132,5 +131,14 @@ button:hover{
 }
 
 body{
-  width: 1145px;
+  min-height: 100%
+}
+
+section.footer-area{
+  display: inline-block;
+  width: 100%;
+  margin-top: 40px;
+  position: absolute; 
+  bottom: 0;
+  left: 0;
 }
