--- a/client/src/App.css
+++ b/client/src/App.css
@@ -120,6 +120,32 @@ button:hover{
   margin-top: 20px;
 }
 
+.Items{
+  list-style-type: none;
+
+}
+
+.card{
+  background-color: white;
+  display: inline-block;
+  border-radius: 15px;
+  border-color: black;
+  border-width: 2px;
+  border-style: solid;
+  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.25);
+
+  width: 25%;
+  padding: 20px;
+  margin: 30px 10px;
+
+}
+
+.card:hover{
+transform: translateY(-5px);
+}
+
+
+
 .article{
   width: 835px;
   height: 832px;
