--- a/client/src/App.css
+++ b/client/src/App.css
@@ -136,6 +136,7 @@ button:hover{
   box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.25);
 
   width: 25%;
+  height: 150px;
   padding: 20px;
   margin: 30px 10px;
 
