--- a/client/src/App.css
+++ b/client/src/App.css
@@ -51,7 +51,7 @@ section.content{
 
 }
 
-form {
+#searchbarForm {
   background-color: white;
   display: flex;
   padding: 6px;
@@ -64,7 +64,7 @@ html, body{
   background-color: #FCF6E8;
 }
 
-input {
+#searchbarForm input  {
   width: 80%; 
   height: 70%;
   margin: auto 2%;
@@ -90,10 +90,20 @@ padding: 10px;
 box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.25);
 display: inline-block;
 float: left;
+border-radius: 7px;
+}
+
+.category{
+  font-size: 20px;
+  margin-top: 20px;
 }
 
 .filter{
   list-style-type: none;
+  text-align: left;
+  font-size: 17px;
+  line-height: 1.7;
+  
 }
 
 button{
@@ -116,10 +126,7 @@ button:hover{
   color: white;
 }
 
-.category{
-  font-size: 18px;
-  margin-top: 20px;
-}
+
 
 .Items{
   list-style-type: none;
