--- a/client/src/App.css
+++ b/client/src/App.css
@@ -32,6 +32,7 @@
 
 section.search{
 display: block;
+
 }
 
 section.content{
@@ -39,13 +40,22 @@ section.content{
 
 }
 
+section.branding{
+  width: 90px;
+  margin-top: 10px;
+  margin-left: 10px;
+  float: left;
+}
+
 .searchbar{
   /* display: inline-block; */
   /* float: left; */
-  margin-top: 10px;
+  margin-top: 50px;
   margin-left: 25%;
+  margin-bottom: 5px;
   box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.25);
   width: 550px;
+  border-radius: 7px;
 
 
 
@@ -56,6 +66,8 @@ section.content{
   display: flex;
   padding: 6px;
   height: 66px;
+  border-radius: 7px;;
+  
 
 }
 
@@ -76,13 +88,24 @@ html, body{
   border-style: solid;
 }
 
+#searchbarForm input:hover  {
+
+  border-color: #4ec3ab;
+}
+
+#searchbarForm input:focus  {
+
+  border-color: #4ec3ab;
+}
+
+
 
 .icon{
   margin: 12px;
 }
 
 .sidebar{
-margin-top: 3%;
+margin-top: 2%;
 background-color: white;
 width: 20%;
 height: 540px;
@@ -249,7 +272,7 @@ hr{
 }
 
 .navigation{
-  background-color: #b7da93;
+  background-color: #4ec3ab;
   position: sticky;
   top: 0;
 }
