--- a/client/src/App.css
+++ b/client/src/App.css
@@ -32,7 +32,6 @@
 
 section.search{
 display: block;
-
 }
 
 section.content{
@@ -40,22 +39,13 @@ section.content{
 
 }
 
-section.branding{
-  width: 90px;
-  margin-top: 10px;
-  margin-left: 10px;
-  float: left;
-}
-
 .searchbar{
   /* display: inline-block; */
   /* float: left; */
-  margin-top: 50px;
+  margin-top: 10px;
   margin-left: 25%;
-  margin-bottom: 5px;
   box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.25);
   width: 550px;
-  border-radius: 7px;
 
 
 
@@ -66,8 +56,6 @@ section.branding{
   display: flex;
   padding: 6px;
   height: 66px;
-  border-radius: 7px;;
-  
 
 }
 
@@ -86,19 +74,7 @@ html, body{
   border-width: 3px;
   border-color: black;
   border-style: solid;
-  outline: none;
 }
-
-#searchbarForm input:hover  {
-
-  border-color: #4ec3ab;
-}
-
-#searchbarForm input:focus  {
-
-  border-color: #4ec3ab;
-}
-
 
 
 .icon{
@@ -106,7 +82,7 @@ html, body{
 }
 
 .sidebar{
-margin-top: 2%;
+margin-top: 3%;
 background-color: white;
 width: 20%;
 height: 540px;
@@ -273,7 +249,7 @@ hr{
 }
 
 .navigation{
-  background-color: #4ec3ab;
+  background-color: #b7da93;
   position: sticky;
   top: 0;
 }
